feat: add get todo info functionality
